tooling/nargo_cli/tests/snapshots/execution_success/modules_more/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
mod foo {
    pub(crate) mod bar {
        pub fn from_bar(x: Field) -> Field {
            x
        }
    }

    fn hello(x: Field) -> Field {
        x
    }
}

fn main(x: Field, y: Field) {
    assert(x != foo::bar::from_bar(y));
}
